force-app/main/default/objects/COE_Skills_M__c/COE_Skills_M__c.object-meta.xml
<CustomObject>
    <label>COE Skills Matrix</label>
    <nameField>
        <displayFormat>COES-{0000}</displayFormat>
        <label>COE Skills M Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COE Skills Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>