force-app/main/default/objects/COE_Skills_M__c/fields/Auto_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox allows for use to identity for Auto Scheduling</description>
    <label>Auto Scheduled</label>
    <type>Checkbox</type>
</CustomField>