force-app/main/default/objects/COE_Skills_M__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <description>Used by the COE to indicate which IS level a team member needs to be to deliver the associated product&apos;s FlightPath.</description>
    <label>Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>IC1</fullName>
                <isActive>false</isActive>
                <label>IC1</label>
            </value>
            <value>
                <fullName>IC2</fullName>
                <isActive>false</isActive>
                <label>IC2</label>
            </value>
            <value>
                <fullName>IC3</fullName>
                <isActive>false</isActive>
                <label>IC3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>