force-app/main/default/objects/COE_Skills_M__c/fields/End_to_End_Delivery__c.field-meta.xml
<CustomField>
    <fullName>End_to_End_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End to End Delivery</label>
    <type>Checkbox</type>
</CustomField>