force-app/main/default/objects/COE_Skills_M__c/fields/Flight_Path__c.field-meta.xml
<CustomField>
    <fullName>Flight_Path__c</fullName>
    <description>Used by the COE to indicate which IS level a team member needs to be to deliver the associated product&apos;s FlightPath.</description>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliver to Customer</fullName>
            </value>
            <value>
                <fullName>Train Internally</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
            <value>
                <fullName>Design</fullName>
                <isActive>false</isActive>
                <label>Design</label>
            </value>
            <value>
                <fullName>IC1</fullName>
                <isActive>false</isActive>
                <label>IC1</label>
            </value>
            <value>
                <fullName>IC2</fullName>
                <isActive>false</isActive>
                <label>IC2</label>
            </value>
            <value>
                <fullName>IC3</fullName>
                <isActive>false</isActive>
                <label>IC3</label>
            </value>
            <value>
                <fullName>Tech</fullName>
                <isActive>false</isActive>
                <label>Tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>