force-app/main/default/objects/COE_Skills_M__c/fields/FlightPath__c.field-meta.xml
<CustomField>
    <fullName>FlightPath__c</fullName>
    <label>FlightPath</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>