force-app/main/default/objects/COE_Skills_M__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the COE Skills Matrix to the Product Object and only shows Products where isActive = True</description>
    <label>Product Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>COE Skills Matrix</relationshipLabel>
    <relationshipName>COE_Skills_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>