force-app/main/default/objects/COE_Skills_M__c/fields/TaskRayProductList__c.field-meta.xml
<CustomField>
    <fullName>TaskRayProductList__c</fullName>
    <label>TaskRay Product List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaskRay_Product_List</valueSetName>
    </valueSet>
</CustomField>