force-app/main/default/objects/COE_Skills_M__c/fields/Team_Member_Manager__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Manager__c</fullName>
    <formula>Team_Member__r.Manager.FirstName + &apos; &apos; + Team_Member__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member Manager</label>
    <type>Text</type>
</CustomField>