force-app/main/default/objects/COE_Skills_M__c/listViews/Abintegro.listView-meta.xml
<ListView>
    <fullName>Abintegro</fullName>
    <columns>NAME</columns>
    <columns>Team_Member__c</columns>
    <columns>FlightPath__c</columns>
    <filterScope>Everything</filterScope>
    <label>Abintegro</label>
</ListView>