force-app/main/default/objects/COE_Skills_M__c/listViews/All_CoE_Skills.listView-meta.xml
<ListView>
    <fullName>All_CoE_Skills</fullName>
    <columns>NAME</columns>
    <columns>Team_Member__c</columns>
    <columns>Team_Member_Manager__c</columns>
    <columns>FlightPath__c</columns>
    <columns>TaskRayProductList__c</columns>
    <columns>End_to_End_Delivery__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All CoE Skills</label>
</ListView>